--- a/main-pages/login-signup/index.html
+++ b/main-pages/login-signup/index.html
@@ -29,13 +29,13 @@
   <!-- Buttons -->
 <div class="divider"></div>
   <div class="button-row">
-      <button style="width: 720px" class="button-outlined" onclick="window.location.href='../main-pages/login-signup/signup.html'">Go to Signup</button>
-      <button style="width: 340px" class="button-outlined" onclick="window.location.href='../main-pages/login-signup/signup-info.html'">Learn More About Signups</button>
+      <button style="width: 720px" class="button-outlined" onclick="window.location.href='../../main-pages/login-signup/signup.html'">Go to Signup</button>
+      <button style="width: 340px" class="button-outlined" onclick="window.location.href='../../main-pages/login-signup/signup-info.html'">Learn More About Signups</button>
     </div>
 
    <div class="button-row">
-      <button style="width: 720px" class="button-outlined" onclick="window.location.href='../main-pages/login-signup/login.html'">Go to Login</button>
-      <button style="width: 340px" class="button-outlined" onclick="window.location.href='../main-pages/login-signup/login-info.html'">Learn More About Logins</button>
+      <button style="width: 720px" class="button-outlined" onclick="window.location.href='../../main-pages/login-signup/login.html'">Go to Login</button>
+      <button style="width: 340px" class="button-outlined" onclick="window.location.href='../../main-pages/login-signup/login-info.html'">Learn More About Logins</button>
    </div>
 <div class="divider"></div>
 
@@ -100,16 +100,16 @@
 
 <div class="divider"></div>
 <div class="button-row">
-	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../index.html'">Go Home</button>
-	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/games.html'">Go to Games</button>
-	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
-	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../../index.html'">Go Home</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../../main-pages/games.html'">Go to Games</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../../main-pages/apps.html'">Go to Apps</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../../main-pages/video-player/index.html'">Go to Videos</button>
 </div>
 
 	<div class="divider"></div>
 
   <div class="out-btn-center fade-in" style="margin-top: 20px;">
-    <button class="button-outlined" onclick="window.location.href='../main-pages/support-us/index.html'" style="width: 1020px;">
+    <button class="button-outlined" onclick="window.location.href='../../main-pages/support-us/index.html'" style="width: 1020px;">
       Help Support Penguado — Minimal Ads, Maximum Speed
     </button>
   </div>
@@ -140,8 +140,8 @@
         <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
         <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
         <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfjMeVUaN9aUJFXR7wxBV1QmOhLHVsLB8gGAzo_gd9yxWBz6Q/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Report a bug</a></p>
-        <p style="font-size: 12px;"><a href="../main-pages/about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
-        <p style="font-size: 12px;"><a href="../main-pages/about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+        <p style="font-size: 12px;"><a href="../../main-pages/about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+        <p style="font-size: 12px;"><a href="../../main-pages/about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
 
         
       </div>
