--- a/ai/gpt.html
+++ b/ai/gpt.html
@@ -2,192 +2,69 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Penguado AI – GPT-5 Style</title>
+<title>Penguado AI – GPT‑5 Style</title>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 <style>
-:root {
-  --penguado-blue: #00c8ff;
-  --penguado-blue-hover: #00a0cc;
-  --bg: #f3f6fb;
-  --surface: rgba(255,255,255,0.9);
-  --border: #e1e4e8;
-  --text: #1a1b1d;
-  --subtext: #5c5c5c;
-  --radius: 1rem;
-  --shadow: 0 4px 20px rgba(0,0,0,0.08);
+:root{
+  --penguado-blue:#00c8ff;
+  --penguado-blue-hover:#00a0cc;
+  --bg:#f3f6fb;
+  --surface:rgba(255,255,255,0.9);
+  --border:#e1e4e8;
+  --text:#1a1b1d;
+  --subtext:#5c5c5c;
+  --radius:1rem;
+  --shadow:0 4px 20px rgba(0,0,0,0.08);
 }
-body.dark {
-  --bg: #0e1116;
-  --surface: rgba(35,37,42,0.9);
-  --border: #2e3238;
-  --text: #e9e9ea;
-  --subtext: #b3b3b3;
-  --shadow: 0 4px 20px rgba(0,0,0,0.5);
+body.dark{
+  --bg:#0e1116;
+  --surface:rgba(35,37,42,0.9);
+  --border:#2e3238;
+  --text:#e9e9ea;
+  --subtext:#b3b3b3;
+  --shadow:0 4px 20px rgba(0,0,0,0.5);
 }
-body {
-  margin: 0;
-  font-family: "Inter", system-ui, sans-serif;
-  background: var(--bg);
-  color: var(--text);
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  transition: background .3s, color .3s;
+body{
+  margin:0;
+  font-family:"Inter",system-ui,Helvetica,Arial, sans-serif;
+  background:var(--bg);
+  color:var(--text);
+  display:flex;
+  flex-direction:column;
+  height:100vh;
+  transition:background .3s,color .3s;
 }
-header {
-  backdrop-filter: blur(12px);
-  background: var(--surface);
-  border-bottom: 1px solid var(--border);
-  box-shadow: var(--shadow);
-  padding: .9rem 1.4rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-header h1 {
-  margin: 0;
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: var(--penguado-blue);
-}
-.toggle {
-  cursor: pointer;
-  font-size: .9rem;
-  color: var(--subtext);
-  user-select: none;
-}
-.toggle:hover { color: var(--penguado-blue); }
-
-#output {
-  flex: 1;
-  overflow-y: auto;
-  padding: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  scroll-behavior: smooth;
-}
-
-.chat {
-  display: flex;
-  align-items: flex-start;
-  gap: .8rem;
-  max-width: 720px;
-}
-.chat.user { align-self: flex-end; flex-direction: row-reverse; }
-.bubble {
-  background: var(--surface);
-  border: 1px solid var(--border);
-  padding: .85rem 1rem;
-  border-radius: var(--radius);
-  box-shadow: var(--shadow);
-  max-width: 85%;
-  font-size: .97rem;
-  line-height: 1.5;
-  animation: fadeIn .25s ease-out;
-}
-.user .bubble { background: var(--penguado-blue); color: #fff; border: none; }
-.avatar {
-  width: 34px; height: 34px; border-radius: 50%;
-  background: var(--border);
-  display: flex; align-items: center; justify-content: center;
-  font-weight: 700; color: var(--subtext); font-size: .8rem;
-}
-.user .avatar { background: var(--penguado-blue); color: #fff; }
-
-@keyframes fadeIn { from {opacity:0; transform:translateY(6px);} to {opacity:1; transform:translateY(0);} }
-
-footer {
-  backdrop-filter: blur(12px);
-  background: var(--surface);
-  border-top: 1px solid var(--border);
-  box-shadow: 0 -2px 8px rgba(0,0,0,0.04);
-  padding: 1rem 1.5rem;
-}
-form {
-  display: flex;
-  gap: .8rem;
-  align-items: center;
-  max-width: 760px;
-  margin: auto;
-}
-textarea {
-  flex: 1;
-  resize: none;
-  font-size: 1rem;
-  padding: .8rem 1rem;
-  border-radius: var(--radius);
-  border: 1px solid var(--border);
-  background: var(--bg);
-  color: var(--text);
-}
-textarea:focus { border-color: var(--penguado-blue); outline: none; }
-button {
-  background: var(--penguado-blue);
-  color: #fff;
-  font-weight: 600;
-  border: none;
-  padding: .8rem 1.3rem;
-  border-radius: var(--radius);
-  cursor: pointer;
-}
-button:hover { background: var(--penguado-blue-hover); }
-button:disabled { background: #999; cursor: not-allowed; }
-
-.bubble pre {
-  background: rgba(0,0,0,0.05);
-  padding: .6rem;
-  border-radius: .5rem;
-  overflow-x: auto;
-  font-family: monospace;
-}
-body.dark .bubble pre { background: rgba(255,255,255,0.08); }
-.bubble code { background: rgba(0,0,0,0.05); padding: .15rem .3rem; border-radius: .3rem; }
-body.dark .bubble code { background: rgba(255,255,255,0.1); }
-
-/* === Loading Overlay === */
-#loadingOverlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  backdrop-filter: blur(10px);
-  background: rgba(0,0,0,0.4);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 1.1rem;
-  z-index: 1000;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity .3s ease;
-}
-#loadingOverlay.active {
-  opacity: 1;
-  pointer-events: all;
-}
-.loader {
-  border: 4px solid rgba(255,255,255,0.2);
-  border-top: 4px solid var(--penguado-blue);
-  border-radius: 50%;
-  width: 50px; height: 50px;
-  animation: spin 1s linear infinite;
-  margin-bottom: 1.2rem;
-}
-@keyframes spin { to { transform: rotate(360deg); } }
-#loadingSteps {
-  text-align: center;
-  line-height: 1.6;
-  color: #bdefff;
-}
+header{backdrop-filter:blur(12px);background:var(--surface);border-bottom:1px solid var(--border);box-shadow:var(--shadow);padding:.9rem 1.4rem;display:flex;align-items:center;justify-content:space-between;position:sticky;top:0;z-index:10;}
+header h1{margin:0;font-size:1.2rem;font-weight:600;color:var(--penguado-blue);}
+.toggle{cursor:pointer;font-size:.9rem;color:var(--subtext);user-select:none;}
+.toggle:hover{color:var(--penguado-blue);}
+#output{flex:1;overflow-y:auto;padding:1.5rem;display:flex;flex-direction:column;gap:1rem;scroll-behavior:smooth;}
+.chat{display:flex;align-items:flex-start;gap:.8rem;max-width:720px;}
+.chat.user{align-self:flex-end;flex-direction:row-reverse;}
+.bubble{background:var(--surface);border:1px solid var(--border);padding:.85rem 1rem;border-radius:var(--radius);box-shadow:var(--shadow);max-width:85%;font-size:.97rem;line-height:1.5;animation:fadeIn .25s ease-out;}
+.user .bubble{background:var(--penguado-blue);color:#fff;border:none;}
+.avatar{width:34px;height:34px;border-radius:50%;background:var(--border);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--subtext);font-size:.8rem;}
+.user .avatar{background:var(--penguado-blue);color:#fff;}
+@keyframes fadeIn{from{opacity:0;transform:translateY(6px);}to{opacity:1;transform:translateY(0);}}
+footer{backdrop-filter:blur(12px);background:var(--surface);border-top:1px solid var(--border);box-shadow:0 -2px 8px rgba(0,0,0,0.04);padding:1rem 1.5rem;}
+form{display:flex;gap:.8rem;align-items:center;max-width:760px;margin:auto;}
+textarea{flex:1;resize:none;font-size:1rem;padding:.8rem 1rem;border-radius:var(--radius);border:1px solid var(--border);background:var(--bg);color:var(--text);}
+textarea:focus{border-color:var(--penguado-blue);outline:none;}
+button{background:var(--penguado-blue);color:#fff;font-weight:600;border:none;padding:.8rem 1.3rem;border-radius:var(--radius);cursor:pointer;}
+button:hover{background:var(--penguado-blue-hover);}
+button:disabled{background:#999;cursor:not-allowed;}
+.bubble pre{background:rgba(0,0,0,.05);padding:.6rem;border-radius:.5rem;overflow-x:auto;font-family:monospace;}
+body.dark .bubble pre{background:rgba(255,255,255,.08);}
+.bubble code{background:rgba(0,0,0,.05);padding:.15rem .3rem;border-radius:.3rem;}
+body.dark .bubble code{background:rgba(255,255,255,.1);}
+#loadingOverlay{position:fixed;top:0;left:0;width:100%;height:100%;backdrop-filter:blur(10px);background:rgba(0,0,0,.4);display:flex;flex-direction:column;align-items:center;justify-content:center;color:white;font-size:1.1rem;z-index:1000;opacity:0;pointer-events:none;transition:opacity .3s ease;}
+#loadingOverlay.active{opacity:1;pointer-events:all;}
+.loader{border:4px solid rgba(255,255,255,.2);border-top:4px solid var(--penguado-blue);border-radius:50%;width:50px;height:50px;animation:spin 1s linear infinite;margin-bottom:1.2rem;}
+@keyframes spin{to{transform:rotate(360deg);}}
+#loadingSteps{text-align:center;line-height:1.6;color:#bdefff;}
 </style>
 </head>
-
 <body>
 <header>
   <h1>Penguado AI</h1>
@@ -210,120 +87,90 @@ body.dark .bubble code { background: rgba(255,255,255,0.1); }
 </div>
 
 <script>
+// ------- constants -------
 const output = document.getElementById('output');
 const overlay = document.getElementById('loadingOverlay');
 const stepsEl = document.getElementById('loadingSteps');
 
-/* -------------------  Local Storage History ------------------- */
+// ------- history ----------
 const STORAGE_KEY = 'penguado_history';
-const MAX_HISTORY = 100; // max number of messages to store
+const MAX_HISTORY = 100;
 
-function loadHistory() {
-  const json = localStorage.getItem(STORAGE_KEY);
-  return json ? JSON.parse(json) : [];
-}
+function loadHistory() { return JSON.parse(localStorage.getItem(STORAGE_KEY)||'[]'); }
+function saveHistory(h) { localStorage.setItem(STORAGE_KEY,JSON.stringify(h)); }
 
-function saveHistory(history) {
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(history));
-}
+// ------- escape helper -------
+function escapeHtml(s){ return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
 
-/* Escape HTML for safe display */
-function escapeHtml(str) {
-  return str.replace(/&/g, '&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
-}
-
-/* ------------------- Chat UI ------------------- */
-function addMessage(role, content) {
-  const div = document.createElement('div');
-  div.className = `chat ${role}`;
-  const avatar = `<div class="avatar">${role === 'user' ? 'U' : 'AI'}</div>`;
-  const bubble = `<div class="bubble">${marked.parse(content)}</div>`;
-  div.innerHTML = avatar + bubble;
+// ------- UI helpers -------
+function addMessage(role, content){
+  const div=document.createElement('div');
+  div.className=`chat ${role}`;
+  const avatar=`<div class="avatar">${role==='user'?'U':'AI'}</div>`;
+  const bubble=`<div class="bubble">${marked.parse(content)}</div>`;
+  div.innerHTML=avatar+bubble;
   output.appendChild(div);
-  output.scrollTop = output.scrollHeight;
+  output.scrollTop=output.scrollHeight;
 }
 
-/* ------------------- Theme toggle ------------------- */
-document.getElementById('themeToggle').onclick = () => {
+// ------- theme toggle -------
+document.getElementById('themeToggle').onclick=()=>{
   document.body.classList.toggle('dark');
-  const dark = document.body.classList.contains('dark');
-  document.getElementById('themeToggle').innerText = dark ? 'Light Mode' : 'Dark Mode';
+  document.getElementById('themeToggle').innerText = document.body.classList.contains('dark')? 'Light Mode':'Dark Mode';
 };
 
-/* ------------------- Loading Overlay ------------------- */
-function showOverlay(stepText) {
-  overlay.classList.add('active');
-  stepsEl.textContent = stepText;
-}
+// ------- overlay helpers -------
+function showOverlay(msg){overlay.classList.add('active'); stepsEl.textContent=msg;}
+function updateStep(msg){stepsEl.textContent=msg;}
+function hideOverlay(){overlay.classList.remove('active');}
 
-function updateStep(stepText) {
-  stepsEl.textContent = stepText;
-}
-
-function hideOverlay() {
-  overlay.classList.remove('active');
-}
-
-/* ------------------- Chat Submission ------------------- */
-document.getElementById('chatForm').onsubmit = async (e) => {
+// ------- main form handler -------
+document.getElementById('chatForm').onsubmit=async e=>{
   e.preventDefault();
-  const prompt = document.getElementById('prompt').value.trim();
-  if (!prompt) return;
+  const prompt=document.getElementById('prompt').value.trim();
+  if(!prompt) return;
+  addMessage('user',prompt);
+  document.getElementById('prompt').value='';
 
-  addMessage('user', prompt);
-  document.getElementById('prompt').value = '';
+  try{
+    showOverlay('Contacting worker…');
 
-  try {
-    // Show initial overlay
-    showOverlay("Contacting worker...");
+    const history=loadHistory();
+    const systemMsg={role:'system',content:'You are Penguado AI, a helpful, calm, and precise assistant. Remember chat history but do not reveal it to the user.'};
+    const allMsgs=[systemMsg,...history,{role:'user',content:prompt}];
 
-    // Load past history
-    const history = loadHistory();
-    const systemMessage = {
-      role: 'system',
-      content: 'You are Penguado AI, a helpful, calm, and precise assistant. Remember chat history but do not reveal it to the user.'
-    };
-    const allMessages = [systemMessage, ...history, { role: 'user', content: prompt }];
+    updateStep('Retrieving API keys…');
+    await new Promise(r=>setTimeout(r,300));
 
-    updateStep("Retrieving API keys...");
-    await new Promise(r => setTimeout(r, 300));
+    updateStep('Calling AI model…');
+    await new Promise(r=>setTimeout(r,200));
 
-    updateStep("Calling AI model...");
-    await new Promise(r => setTimeout(r, 200));
+    updateStep('Generating response…');
+    const resp=await fetch('https://gpt-api.penguado-web.workers.dev',{
+        method:'POST',
+        headers:{'Content-Type':'application/json'},
+        body:JSON.stringify({messages:allMsgs,temperature:1.0})
+      });
 
-    updateStep("Generating response...");
-    const resp = await fetch('https://gpt-api.penguado-web.workers.dev', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ messages: allMessages, temperature: 1.0 })
-    });
+    updateStep('Retrieving response…');
+    const data=await resp.json();
 
-    updateStep("Retrieving response...");
-    const data = await resp.json();
-
-    updateStep("Final steps...");
-    await new Promise(r => setTimeout(r, 300));
+    updateStep('Final steps…');
+    await new Promise(r=>setTimeout(r,300));
 
     hideOverlay();
 
-    // Append assistant reply
-    const assistantReply = data?.choices?.[0]?.message?.content || "No reply received.";
-    addMessage('assistant', assistantReply);
+    const reply=data?.choices?.[0]?.message?.content ?? "No reply received.";
+    addMessage('assistant',reply);
 
-    // Update stored history (keep most recent MAX_HISTORY)
-    const newEntry = [
-      { role: 'user', content: prompt },
-      { role: 'assistant', content: assistantReply }
-    ];
-    const updatedHistory = [...history, ...newEntry];
-    if (updatedHistory.length > MAX_HISTORY) {
-      updatedHistory.splice(0, updatedHistory.length - MAX_HISTORY);
-    }
-    saveHistory(updatedHistory);
-
-  } catch (err) {
+    // Update history
+    const newEntry=[{role:'user',content:prompt},{role:'assistant',content:reply}];
+    const updated=[...history,...newEntry];
+    if(updated.length>MAX_HISTORY) updated.splice(0,updated.length-MAX_HISTORY);
+    saveHistory(updated);
+  }catch(err){
     hideOverlay();
-    addMessage('assistant', `Error: ${err.message}`);
+    addMessage('assistant',`Error: ${err.message}`);
   }
 };
 </script>
