--- a/main-pages/about/cookie-policy.html
+++ b/main-pages/about/cookie-policy.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
+     crossorigin="anonymous"></script>	
+<link rel="icon" type="image/jpg" href="../../assets/images/favicon.jpg">
+  
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penguado - About</title>
+  <link rel="stylesheet" href="../../assets/css/style.css">
+  <script src="../../assets/js/script.js" defer></script>
+</head>
+<body>
+<!-- Nav Bar -->
+<div id="nav-placeholder"></div>
 
+<!-- Banner -->
+<header class="banner" style="height: 400px">
+  <div class="banner-overlay">
+    <h1 class="page-title">About</h1>
+    <div class="title-underline"></div>
+  </div>
+</header>
+
+<div class="divider"></div>
+
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">Penguado Cookie Policy</p> 
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">Effective Date: August 10, 2025<br>Last Updated: October 31, 2025<br><br>This Cookie Policy explains how Penguado (“we,” “our,” “us”) uses cookies and similar technologies when you visit or use our website and services.</p>
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>1. What Are Cookies?</p> 
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">Cookies are small text files placed on your device when you visit a website. They help websites remember your preferences, keep you logged in, and improve your browsing experience.<br><br>Penguado also uses local storage, a similar technology stored in your browser, to remember login details securely.</p>
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>2. How We Use Cookies</p> 
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">We use cookies and local storage for the following purposes:</p>
+ <ul class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+   <li>Authentication & Security — To store your UUID and email address so you remain logged in and your session is secure</li>
+   <li>Website Functionality — To ensure our services run smoothly and remember your settings</li>
+   <li>Analytics — To understand how users interact with Penguado using Google Analytics, which helps us improve features and user experience</li>
+ </ul>
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>3. Types of Cookies We Use</p> 
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">Essential Cookies: These are necessary for Penguado to function. They enable core features like login sessions and secure access.</p>
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>4. Third-Party Cookies</p> 
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">Some cookies are set by third parties, such as Github Pages. <br>We encourage you to view their Privacy Policy.</p>
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>5. Managing Cookies</p> 
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">You can control or delete cookies through your browser settings. Please note:</p> 
+ <ul class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+   <li>Disabling essential cookies may prevent Penguado from functioning correctly</li>
+   <li>Disabling third party cookies will not affect our servers directly, but they may cause inconveniences such as long page loading times, and less security. Third party tracking cookies are not allowed on Penguado and user data is never sold.</li>
+ </ul>
+
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>6. Changes to This Policy</p>
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;"><br>We may update this Cookie Policy from time to time. Any changes will be posted here with a new “Last Updated” date.<br><br>Contact Us<br>If you have any questions about this Cookie Policy, email us at <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;"> penguado.web@gmail.com </a>.</p>
+
+ <div class="divider"></div>
+  <div class="button-row">
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./index.html'">Return to About</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./privacy-policy/index.html'">Go to Privacy Policy</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./termos-of-service/index.html'">Go to Terms of Service</button>
+
+</div>
+  
+<div class="button-row">
+  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='../../main-pages/support-us/index.html'">
+    Help Support Penguado — Minimal Ads, Maximum Speed
+  </button>
+</div>
+
+<div class="divider"></div>
+  	<iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+  
+
+<!-- Footer DO NOT EDIT -->
+<footer class="footer" style="padding-bottom: 100px;">
+  <div class="footer-content">
+    <div class="text-left">
+      <p style="font-size: 12px;">
+        © 2025 Penguado (https://penguado.top).<br>
+        All rights reserved. Unauthorized use of this code is prohibited. 
+        <a href="../../../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
+        We are working hard to improve your user experience.
+      </p>
+    </div>
+
+    <div class="text-right">
+      <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
+      <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
+      <p style="font-size: 12px;"><a href="../../about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+      <p style="font-size: 12px;"><a href="../../about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+    </div>
+  </div>
+
+  <iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
+</footer>
+</body>
+
+<script>
+  fetch("../../navigation.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("nav-placeholder").innerHTML = data;
+    });
+</script>
+</html>
