--- a/main-pages/about/privacy-policy/index.html
+++ b/main-pages/about/privacy-policy/index.html
@@ -24,8 +24,10 @@
 </header>
 
 <div class="divider"></div>
-<p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">To make things clear for everyone, Penguado provides a straightforward, easy-to-read Privacy Policy so all users can understand exactly what they’re agreeing to. You can view our full Privacy Policy below for a more detailed explanation of how our website operates.</p>
-<div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./full-privacy-policy.html'">Click for Full Privacy Policy</button></div>
+<div class="content">
+	<p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">To make things clear for everyone, Penguado provides a straightforward, easy-to-read Privacy Policy so all users can understand exactly what they’re agreeing to. You can view our full Privacy Policy below for a more detailed explanation of how our website operates.</p>
+	<div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./full-privacy-policy.html'">Click for Full Privacy Policy</button></div>
+</div>	
 <div class="divider"></div>	
 	
 <main class="content">
