--- a/main-pages/about/privacy-policy/full-privacy-policy.html
+++ b/main-pages/about/privacy-policy/full-privacy-policy.html
@@ -7,7 +7,7 @@
   
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Penguado - Privacy Policy</title>
+  <title>Penguado - Full Privacy Policy</title>
   <link rel="stylesheet" href="../../../assets/css/style.css">
   <script src="../../../assets/js/script.js" defer></script>
 </head>
@@ -18,7 +18,7 @@
 <!-- Banner -->
 <header class="banner" style="height: 400px">
   <div class="banner-overlay">
-    <h1 class="page-title">Privacy Policy</h1>
+    <h1 class="page-title">Full Privacy Policy</h1>
     <div class="title-underline"></div>
   </div>
 </header>
